--- a/mainpage/mainpage.html
+++ b/mainpage/mainpage.html
@@ -4,51 +4,17 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <style>
-    body {
-      background-image: url(../mainpage/바르샤.jpg);
-      background-size: cover;
-      background-repeat: no-repeat;
-    }
-    body > head {
-      display: flex;
-      justify-content: space-between;
-    }
-    h1 {
-      color: white;
-    }
-    ul {
-      list-style: none;
-    }
-    li {
-      color: white;
-    }
-    a {
-      text-decoration: none;
-      color: white;
-    }
-    #navul {
-      display: flex;
-      justify-content: center;
-    }
-    #navul > li {
-      padding: 0px 30px 0px 30px;
-      font-size: x-large;
-    }
-    #navul2{
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-    }
-    #SQUADli {
-      margin-left: 0px;
-    }
-  </style>
+  <link rel="stylesheet" href="mainpage.css">
+  <script src="mainpage.js"></script>
 </head>
 <body>
   <head>
-    <div>
+    <div id="headdiv1">
       <h1>Fc Barcelona</h1>
+      <div>
+        <button type="button" onclick="login()">로그인</button>
+        <button type="button" onclick="join()">회원가입</button>
+      </div>
     </div>
       <ul>
         <li><a href="https://www.laliga.com/en-GB">LA Liga</a></li>
@@ -58,21 +24,126 @@
   <nav>
     <ul id="navul">
       <li><a href="">HOME</a></li>
-      <li><a href="">MENU</a></li>
+      <li><a href="" onmouseover="menumouseover()">MENU</a>
+      <ul id="menuul" onmouseout="menumouseout()">
+        <li>League</li>
+        <li>Camp Nou</li>
+      </ul></li>
       <li><a href="">BORD</a></li>
-      <li><a href="">SHOPING</a></li>
-      <li><a href="">
+      <li><a href="" onmouseover="shopingmouseover()">SHOPING
+        <ul id="shopingul" onmouseout="shopingmouseout()">
+          <li>Ticket</li>
+          <li>Uniform</li>
+        </ul>
+      </a></li>
+      <li><a href="" onmouseover="squadmouseover()">
         SQUAD</a>
-        <ul id="navul2">
-          <li id="SQUADli">PLAYERS</li>
-          <li id="SQUADli">HEAD COACH</li>
-          <li id="SQUADli">COACH</li>
+        <ul id="squadul" onmouseout="squadmouseout()">
+          <li><a href="">PLAYERS</a></li>
+          <li><a href="">HEAD COACH</a></li>
+          <li><a href="">COACH</a></li>
         </ul>
       </li>
     </ul>
   </nav>
+  <section>
+    <p style="color: white;">section</p>
+  </section>
   <footer>
-
+    <div id="footerdiv1">
+      <img id="footerimg" src="../mainpage/바르샤 리그 타이틀.png" alt="리그타이틀">
+      <img id="footerimg" src="../mainpage/바르샤 챔피언스 리그 타이틀.png" alt="챔피언스 리그 타이틀">
+      <img id="footerimg" src="../mainpage/바르샤 피파 월드컵 타이틀.png" alt="피파 월드컵 타이틀">
+      <img id="footerimg" src="../mainpage/바르샤 코파델레이 타이틀.png" alt="코파델레이 타이틀">
+    </div>
+    <div>
+      <ul id="footerul1">
+        <li>Goalkeepers
+            <ul id="footerul2">
+              <li><a href="https://www.fcbarcelona.com/en/football/first-team/players/11072/marc-andre-ter-stegen">Marc-André ter Stegen</a></li>
+              <li><a href="https://www.fcbarcelona.com/en/football/first-team/players/53621/ignacio-pena-sotorres">Iñaki Peña</a></li>
+            </ul>
+        </li>
+        <li>Defenders
+          <ul id="footerul2">
+            <li><a href="https://www.fcbarcelona.com/en/football/first-team/players/5051/joao-pedro-cavaco-cancelo">João Cancelo</a></li>
+            <li><a href="https://www.fcbarcelona.com/en/football/first-team/players/68906/alejandro-balde">Alejandro Balde</a></li>
+            <li><a href="https://www.fcbarcelona.com/en/football/first-team/players/66133/ronald-araujo">Ronald Araujo</a></li>
+            <li><a href="https://www.fcbarcelona.com/en/football/first-team/players/5815/inigo-martinez">Iñigo Martínez</a></li>
+            <li><a href="https://www.fcbarcelona.com/en/football/first-team/players/4495/andreas-christensen">Andreas Christensen</a></li>
+            <li><a href="https://www.fcbarcelona.com/en/football/first-team/players/4093/marcos-alonso">Marcos Alonso</a></li>
+            <li><a href="https://www.fcbarcelona.com/en/football/first-team/players/15552/jules-kounde">Jules Kounde</a></li>
+          </ul>
+        </li>
+        <li>Midfielders
+          <ul id="footerul2">
+            <li><a href="https://www.fcbarcelona.com/en/football/first-team/players/116719/pablo-martin-paez-gavira">Gavi</a></li>
+            <li><a href="https://www.fcbarcelona.com/en/football/first-team/players/70486/pedro-gonzalez">Pedri</a></li>
+            <li><a href="https://www.fcbarcelona.com/en/football/first-team/players/118929/fermin-lopez">Fermín López</a></li>
+            <li><a href="https://www.fcbarcelona.com/en/football/first-team/players/4286/oriol-romeu">Oriol Romeu</a></li>
+            <li><a href="https://www.fcbarcelona.com/en/football/first-team/players/4969/sergi-roberto">Sergi Roberto</a></li>
+            <li><a href="https://www.fcbarcelona.com/en/football/first-team/players/16291/frenkie-de-jong">Frenkie de Jong</a></li>
+            <li><a href="https://www.fcbarcelona.com/en/football/first-team/players/5101/ilkay-gundogan">Ilkay Gündogan</a></li>
+          </ul>
+        </li>
+        <li>Forwards
+          <ul id="footerul2">
+            <li><a href="https://www.fcbarcelona.com/en/football/first-team/players/43098/ferran-torres">Ferran Torres</a></li>
+            <li><a href="https://www.fcbarcelona.com/en/football/first-team/players/5109/robert-lewandowski">Robert Lewandowski</a></li>
+            <li><a href="https://www.fcbarcelona.com/en/football/first-team/players/24156/raphael-dias-belloli">Raphinha</a></li>
+            <li><a href="https://www.fcbarcelona.com/en/football/first-team/players/50856/joao-felix-sequeira">João Félix</a></li>
+            <li><a href="https://www.fcbarcelona.com/en/football/first-team/players/144035/vitor-hugo-roque-ferreira">Vitor Roque</a></li>
+          </ul>
+        </li>
+        <li>Barça Products
+          <ul id="footerul2">
+            <li><a href="https://www.fcbarcelona.com/en/culers">Clers Membership</a></li>
+            <li><a href="https://one.fcbarcelona.com/en/">Barca One</a></li>
+            <li><a href="https://www.fcbarcelona.com/en/tv-apps-watch-barca-tv/">Tv Apps</a></li>
+            <li><a href="https://www.fcbarcelona.com/en/tickets/things-to-do-in-barcelona">Tickets & Museum</a></li>
+            <li><a href="https://www.fcbarcelona.com/en/official-app">Barca App</a></li>
+            <li><a href="https://store.fcbarcelona.com/">Online store</a></li>
+            <li><a href="https://support.fcbarcelona.com/faq/s/?language=en_US">Support/FAQs</a></li>
+            <li><a href="https://frmforms.fcbarcelona.com/digital-betatesters-eng">Become Beta Tester</a></li>
+            <li><a href="https://www.fcbarcelona.com/en/black-friday-barca?btm_source=WebBarca&btm_medium=Footer&btm_campaign=BlackFriday22_ORG_BRAND_GBL_WebBarca_IMG_WW_EN">Black Friday</a></li>
+            <li><a href="https://www.fcbarcelona.com/en/christmas-fcbarcelona?btm_source=WebBarca&btm_medium=Footer&btm_campaign=Xmas2223_ORG_BRAND_GBL_WebBarca_IMG_WW_EN">Christmas Barca</a></li>
+            <li><a href="https://www.fcbarcelona.com/en/culers/games">Games Barca</a></li>
+          </ul>
+        </li>
+        <li>Club
+          <ul id="footerul2">
+            <li><a href="https://www.fcbarcelona.com/en/club/facilities/spotify-camp-nou">Spotify Camp Nou</a></li>
+            <li><a href="https://canaletic.fcbarcelona.cat/setup">Ethical Channel</a></li>
+            <li><a href="https://www.fcbarcelona.com/en/club/identity/the-crest">The Crest</a></li>
+            <li><a href="https://www.fcbarcelona.com/en/club/identity/anthem">Anthem</a></li>
+            <li><a href="https://www.fcbarcelona.com/en/club/facilities/barca-store">Work at the Barça Stores</a></li>
+          </ul>
+        </li>
+        <li>History
+          <ul id="footerul2">
+            <li><a href="https://www.fcbarcelona.com/en/card/643923/2008-16-the-best-years-in-our-history">2008-16. The best years in our history</a></li>
+            <li><a href="https://www.fcbarcelona.com/en/card/643913/1988-1996-the-era-of-the-dream-team">The era of the Dream Team</a></li>
+            <li><a href="https://www.fcbarcelona.com/en/card/643900/1950-1961-the-kubala-era">1950-1961. The Kubala era</a></li>
+            <li><a href="https://www.fcbarcelona.com/en/card/643865/1899-1909-foundation-and-survival">1899-1909. Foundation and survival</a></li>
+            <li><a href="https://www.fcbarcelona.com/en/champions-league">Barça in the Campions League</a></li>
+          </ul>
+        </li>
+      </ul>
+    </div>
+    <div id="footerdiv2">
+      <h1>FC BARCELONA</h1>
+    </div>
+      <br>
+      <div id="footerdiv3">
+        <span>© Copyright FC Barcelona Official website of FC Barcelona</span>
+        <span>
+          Legal Terms |
+          Privacy Policy |
+          Cookies |
+          Accessibility |
+          Contact Us |
+          Support/FAQs</span>
+      </div>
   </footer>
 </body>
 </html>
