--- a/mainpage/mainpage.html
+++ b/mainpage/mainpage.html
@@ -93,6 +93,7 @@
             <li><a href="https://www.fcbarcelona.com/en/football/first-team/players/24156/raphael-dias-belloli">Raphinha</a></li>
             <li><a href="https://www.fcbarcelona.com/en/football/first-team/players/50856/joao-felix-sequeira">João Félix</a></li>
             <li><a href="https://www.fcbarcelona.com/en/football/first-team/players/144035/vitor-hugo-roque-ferreira">Vitor Roque</a></li>
+            <li><a href="https://namu.wiki/w/%EB%9D%BC%EB%AF%BC%20%EC%95%BC%EB%A7%90">Lamin Yamal</a></li>
           </ul>
         </li>
         <li>Barça Products
