chap09작업추가,mainpage수정,chap11생성 comit

--- a/mainpage/mainpage.html
+++ b/mainpage/mainpage.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,7 +8,9 @@
   <link rel="stylesheet" href="mainpage.css">
   <script src="mainpage.js"></script>
 </head>
+
 <body>
+
   <head>
     <div id="headdiv1">
       <h1>Fc Barcelona</h1>
@@ -16,28 +19,29 @@
         <button type="button" onclick="join()">회원가입</button>
       </div>
     </div>
-      <ul>
-        <li><a href="https://www.laliga.com/en-GB">LA Liga</a></li>
-        <li><a href="https://www.uefa.com/uefachampionsleague/">UEFA Champions Legue</a></li>
-      </ul>
+    <ul>
+      <li><a href="https://www.laliga.com/en-GB">LA Liga</a></li>
+      <li><a href="https://www.uefa.com/uefachampionsleague/">UEFA Champions Legue</a></li>
+    </ul>
   </head>
   <nav>
     <ul id="navul">
       <li><a href="">HOME</a></li>
       <li><a href="" onmouseover="menumouseover()">MENU</a>
-      <ul id="menuul" onmouseout="menumouseout()">
-        <li>League</li>
-        <li>Camp Nou</li>
-      </ul></li>
+        <ul id="menuul" onmouseout="menumouseout()">
+          <li>League</li>
+          <li>Camp Nou</li>
+        </ul>
+      </li>
       <li><a href="">BORD</a></li>
       <li><a href="" onmouseover="shopingmouseover()">SHOPING
-        <ul id="shopingul" onmouseout="shopingmouseout()">
-          <li>Ticket</li>
-          <li>Uniform</li>
-        </ul>
-      </a></li>
+          <ul id="shopingul" onmouseout="shopingmouseout()">
+            <li>Ticket</li>
+            <li>Uniform</li>
+          </ul>
+        </a></li>
       <li><a href="" onmouseover="squadmouseover()">
-        SQUAD</a>
+          SQUAD</a>
         <ul id="squadul" onmouseout="squadmouseout()">
           <li><a href="">PLAYERS</a></li>
           <li><a href="">HEAD COACH</a></li>
@@ -51,48 +55,76 @@
   </section>
   <footer>
     <div id="footerdiv1">
-      <img id="footerimg" src="../mainpage/바르샤 리그 타이틀.png" alt="리그타이틀">
-      <img id="footerimg" src="../mainpage/바르샤 챔피언스 리그 타이틀.png" alt="챔피언스 리그 타이틀">
-      <img id="footerimg" src="../mainpage/바르샤 피파 월드컵 타이틀.png" alt="피파 월드컵 타이틀">
-      <img id="footerimg" src="../mainpage/바르샤 코파델레이 타이틀.png" alt="코파델레이 타이틀">
+      <a href="https://www.fcbarcelona.com/en/football/first-team/honours"><img width="320px" id="footerimg"
+          src="../mainpage/바르샤 리그 타이틀.png" alt="리그타이틀"></a>
+      <a href="https://www.fcbarcelona.com/en/football/first-team/honours"><img width="320px" id="footerimg"
+          src="../mainpage/바르샤 챔피언스 리그 타이틀.png" alt="챔피언스 리그 타이틀"></a>
+      <a href="https://www.fcbarcelona.com/en/football/first-team/honours"><img width="320px" id="footerimg"
+          src="../mainpage/바르샤 피파 월드컵 타이틀.png" alt="피파 월드컵 타이틀"></a>
+      <a href="https://www.fcbarcelona.com/en/football/first-team/honours"><img width="320px" id="footerimg"
+          src="../mainpage/바르샤 코파델레이 타이틀.png" alt="코파델레이 타이틀"></a>
     </div>
     <div>
       <ul id="footerul1">
         <li>Goalkeepers
-            <ul id="footerul2">
-              <li><a href="https://www.fcbarcelona.com/en/football/first-team/players/11072/marc-andre-ter-stegen">Marc-André ter Stegen</a></li>
-              <li><a href="https://www.fcbarcelona.com/en/football/first-team/players/53621/ignacio-pena-sotorres">Iñaki Peña</a></li>
-            </ul>
+          <ul id="footerul2">
+            <li><a
+                href="https://www.fcbarcelona.com/en/football/first-team/players/11072/marc-andre-ter-stegen">Marc-André
+                ter Stegen</a></li>
+            <li><a href="https://www.fcbarcelona.com/en/football/first-team/players/53621/ignacio-pena-sotorres">Iñaki
+                Peña</a></li>
+          </ul>
         </li>
         <li>Defenders
           <ul id="footerul2">
-            <li><a href="https://www.fcbarcelona.com/en/football/first-team/players/5051/joao-pedro-cavaco-cancelo">João Cancelo</a></li>
-            <li><a href="https://www.fcbarcelona.com/en/football/first-team/players/68906/alejandro-balde">Alejandro Balde</a></li>
-            <li><a href="https://www.fcbarcelona.com/en/football/first-team/players/66133/ronald-araujo">Ronald Araujo</a></li>
-            <li><a href="https://www.fcbarcelona.com/en/football/first-team/players/5815/inigo-martinez">Iñigo Martínez</a></li>
-            <li><a href="https://www.fcbarcelona.com/en/football/first-team/players/4495/andreas-christensen">Andreas Christensen</a></li>
-            <li><a href="https://www.fcbarcelona.com/en/football/first-team/players/4093/marcos-alonso">Marcos Alonso</a></li>
-            <li><a href="https://www.fcbarcelona.com/en/football/first-team/players/15552/jules-kounde">Jules Kounde</a></li>
+            <li><a href="https://www.fcbarcelona.com/en/football/first-team/players/5051/joao-pedro-cavaco-cancelo">João
+                Cancelo</a></li>
+            <li><a href="https://www.fcbarcelona.com/en/football/first-team/players/68906/alejandro-balde">Alejandro
+                Balde</a></li>
+            <li><a href="https://www.fcbarcelona.com/en/football/first-team/players/66133/ronald-araujo">Ronald
+                Araujo</a></li>
+            <li><a href="https://www.fcbarcelona.com/en/football/first-team/players/5815/inigo-martinez">Iñigo
+                Martínez</a></li>
+            <li><a href="https://www.fcbarcelona.com/en/football/first-team/players/4495/andreas-christensen">Andreas
+                Christensen</a></li>
+            <li><a href="https://www.fcbarcelona.com/en/football/first-team/players/4093/marcos-alonso">Marcos
+                Alonso</a></li>
+            <li><a href="https://www.fcbarcelona.com/en/football/first-team/players/15552/jules-kounde">Jules Kounde</a>
+            </li>
           </ul>
         </li>
         <li>Midfielders
           <ul id="footerul2">
-            <li><a href="https://www.fcbarcelona.com/en/football/first-team/players/116719/pablo-martin-paez-gavira">Gavi</a></li>
+            <li><a
+                href="https://www.fcbarcelona.com/en/football/first-team/players/116719/pablo-martin-paez-gavira">Gavi</a>
+            </li>
             <li><a href="https://www.fcbarcelona.com/en/football/first-team/players/70486/pedro-gonzalez">Pedri</a></li>
-            <li><a href="https://www.fcbarcelona.com/en/football/first-team/players/118929/fermin-lopez">Fermín López</a></li>
-            <li><a href="https://www.fcbarcelona.com/en/football/first-team/players/4286/oriol-romeu">Oriol Romeu</a></li>
-            <li><a href="https://www.fcbarcelona.com/en/football/first-team/players/4969/sergi-roberto">Sergi Roberto</a></li>
-            <li><a href="https://www.fcbarcelona.com/en/football/first-team/players/16291/frenkie-de-jong">Frenkie de Jong</a></li>
-            <li><a href="https://www.fcbarcelona.com/en/football/first-team/players/5101/ilkay-gundogan">Ilkay Gündogan</a></li>
+            <li><a href="https://www.fcbarcelona.com/en/football/first-team/players/118929/fermin-lopez">Fermín
+                López</a></li>
+            <li><a href="https://www.fcbarcelona.com/en/football/first-team/players/4286/oriol-romeu">Oriol Romeu</a>
+            </li>
+            <li><a href="https://www.fcbarcelona.com/en/football/first-team/players/4969/sergi-roberto">Sergi
+                Roberto</a></li>
+            <li><a href="https://www.fcbarcelona.com/en/football/first-team/players/16291/frenkie-de-jong">Frenkie de
+                Jong</a></li>
+            <li><a href="https://www.fcbarcelona.com/en/football/first-team/players/5101/ilkay-gundogan">Ilkay
+                Gündogan</a></li>
           </ul>
         </li>
         <li>Forwards
           <ul id="footerul2">
-            <li><a href="https://www.fcbarcelona.com/en/football/first-team/players/43098/ferran-torres">Ferran Torres</a></li>
-            <li><a href="https://www.fcbarcelona.com/en/football/first-team/players/5109/robert-lewandowski">Robert Lewandowski</a></li>
-            <li><a href="https://www.fcbarcelona.com/en/football/first-team/players/24156/raphael-dias-belloli">Raphinha</a></li>
-            <li><a href="https://www.fcbarcelona.com/en/football/first-team/players/50856/joao-felix-sequeira">João Félix</a></li>
-            <li><a href="https://www.fcbarcelona.com/en/football/first-team/players/144035/vitor-hugo-roque-ferreira">Vitor Roque</a></li>
+            <li><a href="https://www.fcbarcelona.com/en/football/first-team/players/43098/ferran-torres">Ferran
+                Torres</a></li>
+            <li><a href="https://www.fcbarcelona.com/en/football/first-team/players/5109/robert-lewandowski">Robert
+                Lewandowski</a></li>
+            <li><a
+                href="https://www.fcbarcelona.com/en/football/first-team/players/24156/raphael-dias-belloli">Raphinha</a>
+            </li>
+            <li><a href="https://www.fcbarcelona.com/en/football/first-team/players/50856/joao-felix-sequeira">João
+                Félix</a></li>
+            <li><a
+                href="https://www.fcbarcelona.com/en/football/first-team/players/144035/vitor-hugo-roque-ferreira">Vitor
+                Roque</a></li>
             <li><a href="https://namu.wiki/w/%EB%9D%BC%EB%AF%BC%20%EC%95%BC%EB%A7%90">Lamin Yamal</a></li>
           </ul>
         </li>
@@ -106,8 +138,12 @@
             <li><a href="https://store.fcbarcelona.com/">Online store</a></li>
             <li><a href="https://support.fcbarcelona.com/faq/s/?language=en_US">Support/FAQs</a></li>
             <li><a href="https://frmforms.fcbarcelona.com/digital-betatesters-eng">Become Beta Tester</a></li>
-            <li><a href="https://www.fcbarcelona.com/en/black-friday-barca?btm_source=WebBarca&btm_medium=Footer&btm_campaign=BlackFriday22_ORG_BRAND_GBL_WebBarca_IMG_WW_EN">Black Friday</a></li>
-            <li><a href="https://www.fcbarcelona.com/en/christmas-fcbarcelona?btm_source=WebBarca&btm_medium=Footer&btm_campaign=Xmas2223_ORG_BRAND_GBL_WebBarca_IMG_WW_EN">Christmas Barca</a></li>
+            <li><a
+                href="https://www.fcbarcelona.com/en/black-friday-barca?btm_source=WebBarca&btm_medium=Footer&btm_campaign=BlackFriday22_ORG_BRAND_GBL_WebBarca_IMG_WW_EN">Black
+                Friday</a></li>
+            <li><a
+                href="https://www.fcbarcelona.com/en/christmas-fcbarcelona?btm_source=WebBarca&btm_medium=Footer&btm_campaign=Xmas2223_ORG_BRAND_GBL_WebBarca_IMG_WW_EN">Christmas
+                Barca</a></li>
             <li><a href="https://www.fcbarcelona.com/en/culers/games">Games Barca</a></li>
           </ul>
         </li>
@@ -122,10 +158,14 @@
         </li>
         <li>History
           <ul id="footerul2">
-            <li><a href="https://www.fcbarcelona.com/en/card/643923/2008-16-the-best-years-in-our-history">2008-16. The best years in our history</a></li>
-            <li><a href="https://www.fcbarcelona.com/en/card/643913/1988-1996-the-era-of-the-dream-team">The era of the Dream Team</a></li>
-            <li><a href="https://www.fcbarcelona.com/en/card/643900/1950-1961-the-kubala-era">1950-1961. The Kubala era</a></li>
-            <li><a href="https://www.fcbarcelona.com/en/card/643865/1899-1909-foundation-and-survival">1899-1909. Foundation and survival</a></li>
+            <li><a href="https://www.fcbarcelona.com/en/card/643923/2008-16-the-best-years-in-our-history">2008-16. The
+                best years in our history</a></li>
+            <li><a href="https://www.fcbarcelona.com/en/card/643913/1988-1996-the-era-of-the-dream-team">The era of the
+                Dream Team</a></li>
+            <li><a href="https://www.fcbarcelona.com/en/card/643900/1950-1961-the-kubala-era">1950-1961. The Kubala
+                era</a></li>
+            <li><a href="https://www.fcbarcelona.com/en/card/643865/1899-1909-foundation-and-survival">1899-1909.
+                Foundation and survival</a></li>
             <li><a href="https://www.fcbarcelona.com/en/champions-league">Barça in the Campions League</a></li>
           </ul>
         </li>
@@ -134,17 +174,18 @@
     <div id="footerdiv2">
       <h1>FC BARCELONA</h1>
     </div>
-      <br>
-      <div id="footerdiv3">
-        <span>© Copyright FC Barcelona Official website of FC Barcelona</span>
-        <span>
-          Legal Terms |
-          Privacy Policy |
-          Cookies |
-          Accessibility |
-          Contact Us |
-          Support/FAQs</span>
-      </div>
+    <br>
+    <div id="footerdiv3">
+      <span>© Copyright FC Barcelona Official website of FC Barcelona</span>
+      <span>
+        Legal Terms |
+        Privacy Policy |
+        Cookies |
+        Accessibility |
+        Contact Us |
+        Support/FAQs</span>
+    </div>
   </footer>
 </body>
+
 </html>
