메인페이지 수정 comit

--- a/mainpage/mainpage.html
+++ b/mainpage/mainpage.html
@@ -50,9 +50,16 @@
       </li>
     </ul>
   </nav>
-  <section>
-    <p style="color: white;">section</p>
-  </section>
+  <div class="slideshow">
+    <div class="slideshow_slides">
+      <a href=""><img width="960px" height="465px" src="./img/barcelona1.png" alt="바르샤1"></a>
+      <a href=""><img width="960px" height="465px" src="./img/barcelona2.png" alt="바르샤2"></a>
+      <a href=""><img width="960px" height="465px" src="./img/barcelona3.png" alt="바르샤3"></a>
+      <a href=""><img width="960px" height="465px" src="./img/barcelona4.png" alt="바르샤4"></a>
+    </div>
+  </div>
+
+
   <footer>
     <div id="footerdiv1">
       <a href="https://www.fcbarcelona.com/en/football/first-team/honours"><img width="320px" id="footerimg"
