바르샤 메인 페이지 회전목마 추가 commit

--- a/mainpage/mainpage.html
+++ b/mainpage/mainpage.html
@@ -7,6 +7,7 @@
   <title>Document</title>
   <link rel="stylesheet" href="mainpage.css">
   <script src="mainpage.js"></script>
+  <script src="https://kit.fontawesome.com/d086ac9557.js" crossorigin="anonymous" defer></script>
 </head>
 
 <body>
@@ -56,6 +57,16 @@
       <a href=""><img width="960px" height="465px" src="./img/barcelona2.png" alt="바르샤2"></a>
       <a href=""><img width="960px" height="465px" src="./img/barcelona3.png" alt="바르샤3"></a>
       <a href=""><img width="960px" height="465px" src="./img/barcelona4.png" alt="바르샤4"></a>
+    </div>
+    <div class="slideshow_nav">
+      <a href="#" class="prev"><i class="fa-solid fa-circle-chevron-left"></i></a>
+      <a href="#" class="next"><i class="fa-solid fa-circle-chevron-right"></i></a>
+    </div>
+    <div class="indicator">
+      <a href="#" class="active"><i class="fa-solid fa-circle-dot"></i></a>
+      <a href="#"><i class="fa-solid fa-circle-dot"></i></a>
+      <a href="#"><i class="fa-solid fa-circle-dot"></i></a>
+      <a href="#"><i class="fa-solid fa-circle-dot"></i></a>
     </div>
   </div>
 
